#pragma once

class Map
{
public:
    virtual ~Map() = default;
};
